# RomansTasks

./: CMakeLists.txt  main.c  typedefs.h
AdditionalTask/: StudentStructure.c  StudentStructure.h
Task1_GetBit/: GetBit.c  GetBit.h
Task2_SetBit/: SetBit.c  SetBit.h
Task3_GetBitQty/: GetBitQty.c  GetBitQty.h
Task4_ReverseBits/: ReverseBits.c  ReverseBits.h
Task5_CatBytesToNum/: CatBytesToNum.c  CatBytesToNum.h
Task6_SplitNumToArray/: SplitNumToArray.c  SplitNumToArray.h
